# python-factory-pattern

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/parsers/: __init__.py  absfactory.py  parsersfactory.py
src/parsers/modules/: base.py  rtparser.py
src/parsers/typings/: __init__.py  parseddata.py  vars.py
src/schemas/: __init__.py  base.py
src/schemas/article/: __init__.py  article.py  author.py
src/utils/: __init__.py  purify_domain.py
