[tool.poetry]
name = "arachna"
version = "0.1.0"
description = "Parser module"
authors = ["Evgeniy Gribanov <evgeniy.therabbit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"


[tool.poetry.group.dev.dependencies]
devtools = "^0.10.0"
ruff = "^0.0.256"
mypy = "^1.1.1"
black = "^23.1.0"
types-requests = "^2.28.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
